updates to work through the tox automated builds.  All tox components passing in development environment

--- a/tox.ini
+++ b/tox.ini
@@ -30,7 +30,8 @@ deps =
 commands =
     # Use -bb to enable BytesWarnings as error to catch str/bytes misuse.
     # Use -Werror to treat warnings as errors.
-    {envpython} -bb -Werror -m pytest --cov="{envsitepackagesdir}/pysigfig" {posargs}
+    # {envpython} -bb -Werror -m pytest --cov="{envsitepackagesdir}/pysigfig" {posargs}
+    {envpython} -bb -Werror -m pytest --cov="src/pysigfig" {posargs}
 
 [testenv:coverage]
 skip_install = true
@@ -50,7 +51,7 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
 commands =
-    mypy src
+    mypy --ignore-missing-imports src
 
 [testenv:pep8]
 skip_install = true
@@ -58,17 +59,21 @@ setenv =
 deps =
     -r{toxinidir}/dev-requirements.txt
 commands =
-    flake8 src tests
+    flake8 --per-file-ignores=__init__.py:F401 src tests
 
 [testenv:docs]
 skip_install = true
 setenv =
+whitelist_externals=
+    /bin/bash
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev-requirements.txt
 changedir = {toxinidir}/docs
 commands =
-    {envpython} clean_docs.py
+    #{envpython} clean_docs.py
+    bash -ec 'if [ ! -d "_static" ]; then mkdir _static; fi'
+    bash -ec 'if [ ! -d "_templates" ]; then mkdir _templates; fi'
     sphinx-apidoc --force --output-dir apidoc {toxinidir}/src/pysigfig
     sphinx-build -a -W . _build
 
@@ -78,8 +83,8 @@ setenv =
 deps =
     -r{toxinidir}/dev-requirements.txt
 commands =
-    isort .
-    black .
+    isort src tests
+    black src tests
 
 [testenv:fmt-check]
 skip_install = true
@@ -87,8 +92,8 @@ setenv =
 deps =
     -r{toxinidir}/dev-requirements.txt
 commands =
-    isort --check-only .
-    black --check .
+    isort --check-only src tests
+    black --check src tests
 
 [testenv:licenses]
 skip_install = true
