--- a/.github/workflows/python-test-published.yml
+++ b/.github/workflows/python-test-published.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python application
+name: Operational PyPI Tests
 
 on:
   push:
@@ -29,4 +29,4 @@ jobs:
         python -m pip install pysigfig
     - name: Test Normal Operations
       run: |
-        python -c "import math; import pysigfig;"
+        python -c "import math; import pysigfig; x = Float('1.23'); y = Float('4.5'); print(x + y); print(x * y); print(x - y); print(x / y)"
